# cpp-challenge

./: CHANGELOG  CMakeLists.txt  README  buggy.cxx  buildAndTest.sh  checkAndInstallDependencies.sh
deadCodeForReviewer/: buggy.cxx
include/: word_processing.h  word_processing_utils.h
src/: wordOccurrenceCounter.cxx  word_processing.cpp
tests/: wordOccurrenceCounterTest.sh  word_processing_test.cpp
